[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Osman", email = "rashid.osman@vanderbilt.edu"},
    {name = "Osman", email = "72527925+rosman83@users.noreply.github.com"},
]
dependencies = [
    "cycler==0.11.0",
    "kiwisolver==1.3.2",
    "matplotlib==3.4.3",
    "numpy==1.21.0",
    "pandas==1.4.0",
    "Pillow==9.0.1",
    "pyparsing==3.0.7",
    "python-dateutil==2.8.2",
    "pytz==2021.3",
    "scipy==1.7.3",
    "six==1.16.0",
    "numexpr>=2.8.5",
    "bottleneck>=1.3.7",
    "sv-ttk>=2.5.5",
    "openpyxl>=3.1.2",
]
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
